// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application snapshot is matched on movie details path 1`] = `
<DocumentFragment>
  <div>
    <header>
      <strong>
        <span>
          netflix
        </span>
        roulette
      </strong>
      <button>
        X
      </button>
      <img
        alt="movie title"
        src="movie poster_path"
      />
      <div>
        <h1>
          movie title
          <span>
            0.0
          </span>
        </h1>
        <p>
          Action
        </p>
        <p>
          <span>
            movi
          </span>
          <span>
            0h 04m
          </span>
        </p>
        <p>
          movie overview
        </p>
      </div>
    </header>
    <main>
      <nav>
        <div>
          <input
            checked=""
            class="radio-toggle"
            id="radio-toggle-All"
            name="genres"
            type="radio"
            value="All"
          />
          <label
            for="radio-toggle-All"
          >
            All
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Action"
            name="genres"
            type="radio"
            value="Action"
          />
          <label
            for="radio-toggle-Action"
          >
            Action
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Adventure"
            name="genres"
            type="radio"
            value="Adventure"
          />
          <label
            for="radio-toggle-Adventure"
          >
            Adventure
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Animation"
            name="genres"
            type="radio"
            value="Animation"
          />
          <label
            for="radio-toggle-Animation"
          >
            Animation
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Comedy"
            name="genres"
            type="radio"
            value="Comedy"
          />
          <label
            for="radio-toggle-Comedy"
          >
            Comedy
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Crime"
            name="genres"
            type="radio"
            value="Crime"
          />
          <label
            for="radio-toggle-Crime"
          >
            Crime
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Documentary"
            name="genres"
            type="radio"
            value="Documentary"
          />
          <label
            for="radio-toggle-Documentary"
          >
            Documentary
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Drama"
            name="genres"
            type="radio"
            value="Drama"
          />
          <label
            for="radio-toggle-Drama"
          >
            Drama
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Family"
            name="genres"
            type="radio"
            value="Family"
          />
          <label
            for="radio-toggle-Family"
          >
            Family
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Fantasy"
            name="genres"
            type="radio"
            value="Fantasy"
          />
          <label
            for="radio-toggle-Fantasy"
          >
            Fantasy
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-History"
            name="genres"
            type="radio"
            value="History"
          />
          <label
            for="radio-toggle-History"
          >
            History
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Horror"
            name="genres"
            type="radio"
            value="Horror"
          />
          <label
            for="radio-toggle-Horror"
          >
            Horror
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Music"
            name="genres"
            type="radio"
            value="Music"
          />
          <label
            for="radio-toggle-Music"
          >
            Music
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Mystery"
            name="genres"
            type="radio"
            value="Mystery"
          />
          <label
            for="radio-toggle-Mystery"
          >
            Mystery
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Romance"
            name="genres"
            type="radio"
            value="Romance"
          />
          <label
            for="radio-toggle-Romance"
          >
            Romance
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Science-Fiction"
            name="genres"
            type="radio"
            value="Science Fiction"
          />
          <label
            for="radio-toggle-Science-Fiction"
          >
            Science Fiction
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-TV-Movie"
            name="genres"
            type="radio"
            value="TV Movie"
          />
          <label
            for="radio-toggle-TV-Movie"
          >
            TV Movie
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Thriller"
            name="genres"
            type="radio"
            value="Thriller"
          />
          <label
            for="radio-toggle-Thriller"
          >
            Thriller
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-War"
            name="genres"
            type="radio"
            value="War"
          />
          <label
            for="radio-toggle-War"
          >
            War
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Western"
            name="genres"
            type="radio"
            value="Western"
          />
          <label
            for="radio-toggle-Western"
          >
            Western
          </label>
        </div>
        <label>
          <span>
            sort by
          </span>
          <select>
            <option
              value="BY_RELEASE_ASC"
            >
              Release Date
            </option>
            <option
              value="BY_NAME_ASC"
            >
              Name
            </option>
            <option
              value="BY_RELEASE_DESC"
            >
              Release Date Descending
            </option>
            <option
              value="BY_NAME_DESC"
            >
              Name Descending
            </option>
          </select>
        </label>
      </nav>
      <div>
        <strong>
          1
        </strong>
         movie found
      </div>
      <div>
        <article>
          <nav
            class=""
            role="navigation"
          >
            <ul>
              <li>
                <button
                  aria-haspopup="true"
                >
                  Details
                </button>
                <ul
                  aria-label="submenu"
                  class="dropdown"
                >
                  <li>
                    <button>
                      Edit
                    </button>
                  </li>
                  <li>
                    <button>
                      Delete
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </nav>
          <img
            alt="movie title"
            src="movie poster_path"
          />
          <div>
            <h1>
              movie title
            </h1>
            <p>
              movi
            </p>
            <p>
              Action
            </p>
          </div>
        </article>
      </div>
    </main>
    <footer>
      <strong>
        <span>
          netflix
        </span>
        roulette
      </strong>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Application snapshot is matched on root path 1`] = `
<DocumentFragment>
  <div>
    <header>
      <strong>
        <span>
          netflix
        </span>
        roulette
      </strong>
      <button>
        + Add Movie
      </button>
      <form>
        <label>
          <span>
            Find your movie
          </span>
          <input
            placeholder="What do you want to watch?"
            type="text"
            value=""
          />
        </label>
        <button
          class=""
        >
          Search
        </button>
      </form>
    </header>
    <main>
      <nav>
        <div>
          <input
            checked=""
            class="radio-toggle"
            id="radio-toggle-All"
            name="genres"
            type="radio"
            value="All"
          />
          <label
            for="radio-toggle-All"
          >
            All
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Action"
            name="genres"
            type="radio"
            value="Action"
          />
          <label
            for="radio-toggle-Action"
          >
            Action
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Adventure"
            name="genres"
            type="radio"
            value="Adventure"
          />
          <label
            for="radio-toggle-Adventure"
          >
            Adventure
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Animation"
            name="genres"
            type="radio"
            value="Animation"
          />
          <label
            for="radio-toggle-Animation"
          >
            Animation
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Comedy"
            name="genres"
            type="radio"
            value="Comedy"
          />
          <label
            for="radio-toggle-Comedy"
          >
            Comedy
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Crime"
            name="genres"
            type="radio"
            value="Crime"
          />
          <label
            for="radio-toggle-Crime"
          >
            Crime
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Documentary"
            name="genres"
            type="radio"
            value="Documentary"
          />
          <label
            for="radio-toggle-Documentary"
          >
            Documentary
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Drama"
            name="genres"
            type="radio"
            value="Drama"
          />
          <label
            for="radio-toggle-Drama"
          >
            Drama
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Family"
            name="genres"
            type="radio"
            value="Family"
          />
          <label
            for="radio-toggle-Family"
          >
            Family
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Fantasy"
            name="genres"
            type="radio"
            value="Fantasy"
          />
          <label
            for="radio-toggle-Fantasy"
          >
            Fantasy
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-History"
            name="genres"
            type="radio"
            value="History"
          />
          <label
            for="radio-toggle-History"
          >
            History
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Horror"
            name="genres"
            type="radio"
            value="Horror"
          />
          <label
            for="radio-toggle-Horror"
          >
            Horror
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Music"
            name="genres"
            type="radio"
            value="Music"
          />
          <label
            for="radio-toggle-Music"
          >
            Music
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Mystery"
            name="genres"
            type="radio"
            value="Mystery"
          />
          <label
            for="radio-toggle-Mystery"
          >
            Mystery
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Romance"
            name="genres"
            type="radio"
            value="Romance"
          />
          <label
            for="radio-toggle-Romance"
          >
            Romance
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Science-Fiction"
            name="genres"
            type="radio"
            value="Science Fiction"
          />
          <label
            for="radio-toggle-Science-Fiction"
          >
            Science Fiction
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-TV-Movie"
            name="genres"
            type="radio"
            value="TV Movie"
          />
          <label
            for="radio-toggle-TV-Movie"
          >
            TV Movie
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Thriller"
            name="genres"
            type="radio"
            value="Thriller"
          />
          <label
            for="radio-toggle-Thriller"
          >
            Thriller
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-War"
            name="genres"
            type="radio"
            value="War"
          />
          <label
            for="radio-toggle-War"
          >
            War
          </label>
          <input
            class="radio-toggle"
            id="radio-toggle-Western"
            name="genres"
            type="radio"
            value="Western"
          />
          <label
            for="radio-toggle-Western"
          >
            Western
          </label>
        </div>
        <label>
          <span>
            sort by
          </span>
          <select>
            <option
              value="BY_RELEASE_ASC"
            >
              Release Date
            </option>
            <option
              value="BY_NAME_ASC"
            >
              Name
            </option>
            <option
              value="BY_RELEASE_DESC"
            >
              Release Date Descending
            </option>
            <option
              value="BY_NAME_DESC"
            >
              Name Descending
            </option>
          </select>
        </label>
      </nav>
      <div>
        <strong>
          1
        </strong>
         movie found
      </div>
      <div>
        <article>
          <nav
            class=""
            role="navigation"
          >
            <ul>
              <li>
                <button
                  aria-haspopup="true"
                >
                  Details
                </button>
                <ul
                  aria-label="submenu"
                  class="dropdown"
                >
                  <li>
                    <button>
                      Edit
                    </button>
                  </li>
                  <li>
                    <button>
                      Delete
                    </button>
                  </li>
                </ul>
              </li>
            </ul>
          </nav>
          <img
            alt="movie title"
            src="movie poster_path"
          />
          <div>
            <h1>
              movie title
            </h1>
            <p>
              movi
            </p>
            <p>
              Action
            </p>
          </div>
        </article>
      </div>
    </main>
    <footer>
      <strong>
        <span>
          netflix
        </span>
        roulette
      </strong>
    </footer>
  </div>
</DocumentFragment>
`;
